--- a/assets/index.html
+++ b/assets/index.html
@@ -54,13 +54,13 @@ Preloader
 <div class="wide_layout box-wide">
   <section id="section_1" class="banner hero_section pc_topimg">
     <h1>セルフプロデュースアイドル『+Sugar』公式サイトです。</h1>
-    <img  src="whiteset.jpeg" alt="+Sugar" class="top_img02"/></section>
+    <img src="assets/img/whiteset.jpeg" alt="+Sugar" class="top_img02"/></section>
   <header>
     <nav id="sticktop" class="navbar navbar-default" data-sticky="true">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
-          <a class="navbar-brand" href="#"><img src="whitelogo1.png" class="logo_head" alt="+Sugar"/></a> </div>
+          <a class="navbar-brand" href="#"><img src="assets/img/whitelogo1.jpg" class="logo_head" alt="+Sugar"/></a> </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="#section_5" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Schedule</a></li>
@@ -132,49 +132,49 @@ Preloader
         </div>
         <div class="row media_widget">
           <div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop1"><img src="megu.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop1"><img src="assets/img/assets/img/megu.jpg" alt="" /> </a>
               <figcaption>
                 <h6>メグ・ピッチ・オリオン(めぐぴ)</h6>
                 Prpmgp</figcaption>
             </figure>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop3"><img src="sayaka.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop3"><img src="assets/img/sayaka.jpg" alt="" /> </a>
               <figcaption>
                 <h6>さや</h6>
                 Saya</figcaption>
             </figure>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop4"><img src="merona.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop4"><img src="assets/img/merona.jpg" alt="" /> </a>
               <figcaption>
                 <h6>メロナ</h6>
                 Melona</figcaption>
             </figure>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
-            <figure class="animated fadeInUp"><a href="#" data-toggle="modal" data-target="#gal_pop5"> <img src="nen.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"><a href="#" data-toggle="modal" data-target="#gal_pop5"> <img src="assets/img/nen.jpg" alt="" /> </a>
               <figcaption>
                 <h6>夢乃ネン</h6>
                 Yumeno Nen</figcaption>
             </figure>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop6"> <img src="goma.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop6"> <img src="assets/img/goma.jpg" alt="" /> </a>
               <figcaption>
                 <h6>松山ごま</h6>
                 Matsuyama Goma</figcaption>
             </figure>
           </div>
 			<div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop7"> <img src="kanon.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop7"> <img src="assets/img/kanon.jpg" alt="" /> </a>
               <figcaption>
                 <h6>カノン</h6>
                 Kanon</figcaption>
             </figure>
           </div>
 			<div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop8"> <img src="momotan.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop8"> <img src="assets/img/momotan.jpg" alt="" /> </a>
               <figcaption>
                 <h6>藤宮ももか</h6>
                 Fujimiya Momoka</figcaption>
@@ -256,7 +256,7 @@ Preloader
               <h6>Megupi</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="megu.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/megu.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -298,7 +298,7 @@ Preloader
               <h6>Saya</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="saya.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/saya.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -339,7 +339,7 @@ Preloader
               <h6>Nelona</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="Melona.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/melona.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -380,7 +380,7 @@ Preloader
               <h6>Morishita Kanon</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="nen.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/nen.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -421,7 +421,7 @@ Preloader
               <h6>Kojima Nana</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="goma.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/goma.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -462,7 +462,7 @@ Preloader
 							<h6>Kanon</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/gallery/g7.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/darklogo.png" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -503,7 +503,7 @@ Preloader
               <h6>Fujimiya Momoka</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/gallery/g8.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/darklogo.png" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
