--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Preloader
         </div>
         <div class="row media_widget">
           <div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop1"><img src="assets/img/assets/img/megu.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop1"><img src="assets/img/megu.jpg" alt="" /> </a>
               <figcaption>
                 <h6>メグ・ピッチ・オリオン(めぐぴ)</h6>
                 Prpmgp</figcaption>
