--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ Preloader
 							<h6>Kanon</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/darklogo.png" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/kanon.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -503,7 +503,7 @@ Preloader
               <h6>Fujimiya Momoka</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/darklogo.png" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/momotan.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
