--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ Style Sheets
 <link rel="stylesheet" type="text/css" href="assets/css/animations.css">
 <link rel="stylesheet" type="text/css" href="assets/css/bigvideo.css">
 <link rel="stylesheet" type="text/css" href="assets/css/jquery.mCustomScrollbar.css">
+
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <!--custom styles for Poison-->
 <link rel="stylesheet" href="main.css">
 <script src="assets/js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
