--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Preloader
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
-          <a class="navbar-brand" href="#"><img src="assets/img/whitelogo1.jpg" class="logo_head" alt="+Sugar"/></a> </div>
+          <!-- <a class="navbar-brand" href="#"><img src="assets/img/whitelogo1.jpg" class="logo_head" alt="+Sugar"/></a> </div> -->
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="#section_5" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Schedule</a></li>
@@ -258,7 +258,7 @@ Preloader
               <h6>Megupi</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/megu.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/megusub.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -300,7 +300,7 @@ Preloader
               <h6>Saya</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/sayaka.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/sayakasub.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -382,7 +382,7 @@ Preloader
               <h6>Morishita Kanon</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/nen.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/nensub.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -423,7 +423,7 @@ Preloader
               <h6>Kojima Nana</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/goma.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/gomasub.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -464,7 +464,7 @@ Preloader
 							<h6>Kanon</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/kanon.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/kanonsub.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -505,7 +505,7 @@ Preloader
               <h6>Fujimiya Momoka</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/momotan.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/momotansub.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
