--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@ Preloader
               <div class="gc_wrapper">
                 <div class="responsive-iframe-container big-container">
                   <!-- 埋め込み用 HTML コード -->
-                  <iframe src="https://www.google.com/calendar/embed?showTitle=0&showNav=0&showPrint=0&showTabs=0&showTz=0&height=568&wkst=1&bgcolor=%23FFFFFF&src=akishibup%40gmail.com&color=%232952A3&ctz=Asia%2FTokyo" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+                  <iframe src="https://calendar.google.com/calendar/embed?src=plussuger0314%40gmail.com&ctz=Asia%2FTokyo" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
                 </div>
                 <!--end of .responsive-iframe-container big-container-->
                 <div class="responsive-iframe-container small-container">
                   <!-- 埋め込み用 HTML コード★ embed を htmlembed に変更-->
-                  <iframe src="https://www.google.com/calendar/htmlembed?showTitle=0&showNav=0&showPrint=0&showTabs=0&showTz=0&height=568&wkst=1&bgcolor=%23FFFFFF&src=akishibup%40gmail.com&color=%232952A3&ctz=Asia%2FTokyo" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+                  <iframe src="https://calendar.google.com/calendar/embed?src=plussuger0314%40gmail.com&ctz=Asia%2FTokyo" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
                 </div>
                 <!--end of .responsive-iframe-container small-container-->
 
