--- a/index.html
+++ b/index.html
@@ -544,16 +544,16 @@ Preloader
             <div id="tab1" class="tab-content active">
               <ul class="fanletter">
                 <li>ファンレター宛先</li>
-                <li>〒107-0061</li>
-                <li>東京都千代田区外神田4-7-3 田中ビル3階</li>
-                <li>TWIN PLANET BLDG.</li>
-                <li>アキシブ projectファンレター係</li>
+                <li>〒111111</li>
+                <li>Tokyo </li>
+                <li>Momotan kawai</li>
+                <li>plus_Sugar</li>
               </ul>
             </div>
           </div>
           <div class="row">
             <div class="col-xs-12">
-              <div class="copyrights">&copy; 2019 <a href="#">アキシブ project</a>.</div>
+              <div class="copyrights">&copy; 2019 <a href="#">plus sugar</a>.</div>
             </div>
           </div>
         </div>
