--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Preloader
 <div class="wide_layout box-wide">
   <section id="section_1" class="banner hero_section pc_topimg">
     <!-- <h1>セルフプロデュースアイドル『+Sugar』公式サイトです。</h1> -->
-    <img src="assets/img/whiteset.jpg" alt="+Sugar" class="top_img02"/></section>
+    <img src="assets/img/darkset.jpg" alt="+Sugar" class="top_img02"/></section>
   <header>
     <nav id="sticktop" class="navbar navbar-default" data-sticky="true">
       <div class="container">
