--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Preloader
             <div class="section_head_widget animatedParent ">
               <h2 class="animated fadeInLeft">twitter</h2>
               <h5 class="animated bounceInRight">official account</h5>
-              <a class="twitter-timeline" href="https://twitter.com/plus_Sugar0314" data-tweet-limit="2" data-link-color="#91caf5" data-border-color="#91caf5" data-chrome="noheader nofooter noborders noscrollbar transparent">Tweets by アキシブ project official</a>
+              <a class="twitter-timeline" href="https://twitter.com/plus_Sugar0314" data-tweet-limit="2" data-link-color="#91caf5" data-border-color="#91caf5" data-chrome="noheader nofooter noborders noscrollbar transparent">Tweets by +sugar official</a>
               <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
           </div>
