--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@ Preloader
 </div>
 <div class="wide_layout box-wide">
   <section id="section_1" class="banner hero_section pc_topimg">
-    <!-- <h1>セルフプロデュースアイドル『+Sugar』公式サイトです。</h1> -->
-    <img src="assets/img/whiteset.jpg" alt="+Sugar" class="top_img02"/>
-	</section>
+    <h1>セルフプロデュースアイドル『+Sugar』公式サイトです。</h1>
+    <img src="assets/img/whiteset.jpg" alt="+Sugar" class="top_img02"/></section>
   <header>
     <nav id="sticktop" class="navbar navbar-default" data-sticky="true">
       <div class="container">
