--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Style Sheets
 
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <!--custom styles for Poison-->
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="assets/css/main.css">
 <script src="assets/js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 <style>
 .fixed {
