--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Preloader
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
-          <!-- <a class="navbar-brand" href="#"><img src="assets/img/whitelogo1.jpg" class="logo_head" alt="+Sugar"/></a> </div> -->
+          <a class="navbar-brand" href="#"><img src="assets/img/whitelogo1.jpg" class="logo_head" alt="+Sugar"/></a> </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="#section_5" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Schedule</a></li>
