--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--<![endif]-->
 <head>
 <meta charset="utf-8">
-<title>【+Sugar】オフィシャルサイト</title>
+<title>【+Sugar.】オフィシャルサイト</title>
 
 <!--=================================
 Meta tags
@@ -62,7 +62,7 @@ Preloader
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
-          <a class="navbar-brand" href="#"><img src="assets/img/logo.png" class="logo_head" alt="+Sugar"/></a> </div>
+          <a class="navbar-brand" href="#"><img src="assets/img/tiny.jpg" class="logo_head" alt="+Sugar"/></a> </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="#section_5" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Schedule</a></li>
@@ -191,7 +191,7 @@ Preloader
           <div class="col-xs-12">
             <div class="section_head_widget animatedParent ">
               <h1 class="animated fadeInDown">Biography</h1>
-              <h4>akishibu project</h4>
+              <h4>＋Sugar.(ぷらすしゅがー)、通称ぷらしゅが。ファン名称は微糖派。</h4>
             </div>
           </div>
           <!--section_head_widget-->
@@ -202,26 +202,22 @@ Preloader
           <div class="col-xs-12">
             <div class="text_widget">
               <p align="center" style="padding-bottom: 60px;">いつもの生活にちょこっと甘いお砂糖をプラスしたようなセルフプロデュースユニット！</p>
-              <p><span>2014年</span><br />
-                2014年に</p>
-              <p><span>2015年1月</span><br />
-                ンLIVE開催！</p>
-              <p><span>2015年5月</span><br />
-                新E開催！動員600人超！</p>
-				<p><span>2015年11月</span><br />
-                フFに出演!!</p>
-              <p><span>2016年3月</span><br />
-                でチケットSOLD OUT!!（動員約1100人）</p>
-              <p><span>2017年8月</span><br />
-                ラブ】オリコンウィークリーシングルチャート18位！オリコンデイリーシングルチャート12位獲得！</p>
-              <p><span>2018年8月</span><br />
-                ーデビュー！</p>
+              <p><span>2018年5月</span><br />
+                メグ・ピッチ・オリオン、カノン、日向さや、メロナ、夢乃ねんの5人で始動</p>
+              <p><span>2018年6月</span><br />
+                松山ごま加入</p>
               <p><span>2019年1月</span><br />
-                LIVE開催！満員御礼！（2000キャパ）</p>
-              <p><span>2019年2月</span><br />
-                ンLIVE開催！平日にも関わらず満員御礼！</p>
-              <p><span>2019年5月</span><br />
-								ももたん参加</p>
+								西新宿五丁目TOGI BARにて1stワンマンライブ開催！満員御礼！
+								初オリジナル曲「Bitter+Sweet world」披露
+								2019年3月、4月
+								Tokyo candoll2019準決勝まで参加</p>
+				<p><span>2019年6月</span><br />
+								2曲目オリジナル曲「無糖、恋ドリップコーヒー。」披露</p>
+              <p><span>2019年8月</span><br />
+                秋葉原cosmiclabにて2ndワンマンライブ開催！満員御礼！
+								藤宮ももか加入</p>
+              <p><span>2019年12月</span><br />
+                3曲目オリジナル曲「始まりの合図」披露</p>
             </div>
           </div>
         </div>
