--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Preloader
           <div class="col-xs-12">
             <div class="section_head_widget animatedParent ">
               <h1 class="animated fadeInDown">Biography</h1>
-              <h4>＋Sugar.(ぷらすしゅがー)、通称ぷらしゅが。ファン名称は微糖派。</h4>
+              <h4>＋Sugar.</h4>
             </div>
           </div>
           <!--section_head_widget-->
@@ -201,6 +201,7 @@ Preloader
         <div class="row">
           <div class="col-xs-12">
             <div class="text_widget">
+							<p align="center" style="padding-bottom: 60px;">＋Sugar.(ぷらすしゅがー)、通称ぷらしゅが。ファン名称は微糖派。</p>
               <p align="center" style="padding-bottom: 60px;">いつもの生活にちょこっと甘いお砂糖をプラスしたようなセルフプロデュースユニット！</p>
               <p><span>2018年5月</span><br />
                 メグ・ピッチ・オリオン、カノン、日向さや、メロナ、夢乃ねんの5人で始動</p>
