--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Preloader
         <div class="row">
           <div class="col-xs-12">
             <div class="text_widget">
-							<p align="center" style="padding-bottom: 60px;">＋Sugar.(ぷらすしゅがー)、通称ぷらしゅが。ファン名称は微糖派。</p>
+							<p align="center">＋Sugar.(ぷらすしゅがー)、通称ぷらしゅが。ファン名称は微糖派。</p>
               <p align="center" style="padding-bottom: 60px;">いつもの生活にちょこっと甘いお砂糖をプラスしたようなセルフプロデュースユニット！</p>
               <p><span>2018年5月</span><br />
                 メグ・ピッチ・オリオン、カノン、日向さや、メロナ、夢乃ねんの5人で始動</p>
@@ -541,8 +541,8 @@ Preloader
             <div id="tab1" class="tab-content active">
               <ul class="fanletter">
                 <li>ファンレター宛先</li>
-                <li>〒111111</li>
-                <li>Tokyo </li>
+                <li>〒111-111</li>
+                <li>Tokyo Japan</li>
                 <li>Momotan kawai</li>
                 <li>plus_Sugar</li>
               </ul>
@@ -550,7 +550,7 @@ Preloader
           </div>
           <div class="row">
             <div class="col-xs-12">
-              <div class="copyrights">&copy; 2019 <a href="#">plus sugar</a>.</div>
+              <div class="copyrights">&copy; 2020 <a href="#">plus sugar</a>.</div>
             </div>
           </div>
         </div>
