--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Preloader
             <li><a href="#section_5" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Schedule</a></li>
             <li><a href="#section_7" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Member</a></li>
             <li><a href="#section_12" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Biography</a></li>
-            <li><a href="takoagemat@icloud.com" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Contact</a></li>
+            <li><a href="mailto:takoagemat@icloud.com" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Contact</a></li>
           </ul>
         </div>
         <!--/.nav-collapse -->
