--- a/index.html
+++ b/index.html
@@ -239,6 +239,8 @@ Preloader
               <ul class="channels_list row animatedParent " data-sequence="400">
                 <li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="3"> <a href="https://www.youtube.com/channel/UCy686Sgq85FAOuPSgbH7C1g"><i class="fa fa-youtube"></i>official youtube</a></li>
                 <li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://twitter.com/plus_Sugar0314"><i class="fa fa-twitter"></i>official twitter</a></li>
+								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://linkco.re/yEYygzVE"><i class="fa fa-apple"></i>official music</a></li>
+								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://linkco.re/0f6Ph1vG"><i class="fa fa-apple"></i>official music</a></li>
               </ul>
             </div>
           </div>
