--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Preloader
           <div class="col-xs-12">
             <div class="section_head_widget animatedParent ">
               <h1 class="animated fadeInDown">Biography</h1>
-              <h4>＋Sugar.</h4>
+              <h4> +Sugar. </h4>
             </div>
           </div>
           <!--section_head_widget-->
@@ -542,7 +542,7 @@ Preloader
           <div class="contact_Us">
             <div id="tab1" class="tab-content active">
               <ul class="fanletter">
-                <li>ファンレター宛先</li>
+
               </ul>
             </div>
           </div>
