--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ Preloader
               <h6>Morishita Kanon</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/nensub.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/newnen.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -422,7 +422,7 @@ Preloader
               <h6>Kojima Nana</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/gomasub.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/gomachan.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
