--- a/index.html
+++ b/index.html
@@ -155,14 +155,14 @@ Preloader
             </figure>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
-            <figure class="animated fadeInUp"><a href="#" data-toggle="modal" data-target="#gal_pop5"> <img src="assets/img/nen.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"><a href="#" data-toggle="modal" data-target="#gal_pop5"> <img src="assets/img/newnen.jpg" alt="" /> </a>
               <figcaption>
                 <h6>夢乃ネン</h6>
                 Yumeno Nen</figcaption>
             </figure>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop6"> <img src="assets/img/goma.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop6"> <img src="assets/img/gomachan.jpg" alt="" /> </a>
               <figcaption>
                 <h6>松山ごま</h6>
                 Matsuyama Goma</figcaption>
