--- a/index.html
+++ b/index.html
@@ -266,21 +266,25 @@ Preloader
                   <li>
                     <h6>Profile</h6>
                   </li>
+					<li>名前：メグ・ピッチ・オリオン</li>
 					<li>ニックネーム：めぐぴ</li>
-                  	<li>生年月日：1980/06/26</li>
-					<li>血液型：AB型</li>
-					<li>出身地：茨城県</li>
-					<li>趣味：妄想</li>
-					<li>特技：激辛料理に強い</li>
-					<li>長所：根性！！！！</li>
-					<li>短所：ネガティブ</li>
-					<li>好きなこと：ラプンツェル</li>
-					<li>嫌いなこと：お化け</li>
-					<li>担当カラー：PINK</li>
+					<li>担当カラー：パリピッグリーン</li>
+                  	<li>生年月日：1995/07/17</li>
+					<li>血液型：B型</li>
+					<li>出身地：秋葉原</li>
+					<li>趣味：酒とアイドル</li>
+					<li>特技：人より特に優れたものはない</li>
+					<li>キャッチフレーズ　
+パリピッめぐぴパリピッ！×2
+心はいつでも夢見る15歳
+載せたいURL(インスタとか)</li>
                 </ul>
                 <ul class="channels_list row">
                   <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Prpmgp"><i class="fa fa-twitter"></i>TWITTER</a></li>
                 </ul>
+								<ul class="channels_list row">
+	                  <li class="col-xs-12 col-sm-3"> <a href="https://www.instagram.com/prp_mgp_0717/"><i class="fa fa-Instagram"></i>TWITTER</a></li>
+	              </ul>
               </div>
             </div>
             <!--gallery-popup-->
