--- a/index.html
+++ b/index.html
@@ -274,16 +274,15 @@ Preloader
 					<li>出身地：秋葉原</li>
 					<li>趣味：酒とアイドル</li>
 					<li>特技：人より特に優れたものはない</li>
-					<li>キャッチフレーズ　
-パリピッめぐぴパリピッ！×2
-心はいつでも夢見る15歳
-載せたいURL(インスタとか)</li>
+					<li>キャッチフレーズ：パリピッめぐぴパリピッ！×2
+						心はいつでも夢見る15歳
+						載せたいURL(インスタとか)</li>
                 </ul>
                 <ul class="channels_list row">
                   <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Prpmgp"><i class="fa fa-twitter"></i>TWITTER</a></li>
                 </ul>
 								<ul class="channels_list row">
-	                  <li class="col-xs-12 col-sm-3"> <a href="https://www.instagram.com/prp_mgp_0717/"><i class="fa fa-Instagram"></i>TWITTER</a></li>
+	                  <li class="col-xs-12 col-sm-3"> <a href="https://www.instagram.com/prp_mgp_0717/"><i class="fa fa-Instagram"></i>INSTAGRAM</a></li>
 	              </ul>
               </div>
             </div>
