--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ Preloader
           <button type="button" class="close destroy_owl" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
           <div class="modal-body">
             <div class="gallery_popup container">
-              <h2>めぐぴ</h2>
+              <h2>メグ・ピッチ・オリオン</h2>
               <h6>Megupi</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
@@ -281,6 +281,7 @@ Preloader
                 <ul class="channels_list row">
                   <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Prpmgp"><i class="fa fa-twitter"></i>TWITTER</a></li>
 	                <li class="col-xs-12 col-sm-3"> <a href="https://www.instagram.com/prp_mgp_0717/"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
+									<li class="col-xs-12 col-sm-3"> <a href="https://vt.tiktok.com/MuEh3H/"><i class="fa fa-tiktok"></i>TIKTOK</a></li>
 	              </ul>
               </div>
             </div>
@@ -296,11 +297,11 @@ Preloader
           <button type="button" class="close destroy_owl" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
           <div class="modal-body">
             <div class="gallery_popup container">
-              <h2>さや</h2>
-              <h6>Saya</h6>
+              <h2>黒崎かのん</h2>
+              <h6>Kurosaki Kanon</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/sayakasub.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/kanonsub.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -309,20 +310,19 @@ Preloader
                   <li>
                     <h6>Profile</h6>
                   </li>
-					<li>ニックネーム：さや</li>
-                  	<li>生年月日：1990/12/24</li>
-					<li>血液型：不明</li>
-					<li>出身地：東京都</li>
-					<li>趣味：アイドル鑑賞、ネットサーフィン</li>
-					<li>特技：ダンス、振付、英語、運動</li>
-					<li>長所：頭脳派</li>
-					<li>短所：冷静、めんどくさがり</li>
-					<li>好きなこと：タピオカ、パン</li>
-					<li>嫌いなこと：セミ、怒られること</li>
-					<li>担当カラー：RIGHT BLUE</li>
+					<li>名前：黒崎かのん</li>
+					<li>ニックネーム：かのん</li>
+					<li>担当カラー：白</li>
+                  	<li>生年月日：1995/01/23</li>
+					<li>血液型：AB</li>
+					<li>出身地：神奈川県</li>
+					<li>趣味：買い物</li>
+					<li>特技：かのん推しの顔と名前すぐ覚えられます</li>
+					<li>キャッチフレーズ：ファッション塩対応</li>
                 </ul>
                 <ul class="channels_list row">
-                  <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Saya"><i class="fa fa-twitter"></i>TWITTER</a></li>
+                  <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Kanon"><i class="fa fa-twitter"></i>TWITTER</a></li>
+									<li class="col-xs-12 col-sm-3"> <a href="https://www.instagram.com/ka_ka_oo123"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
                 </ul>
               </div>
             </div>
@@ -337,11 +337,11 @@ Preloader
           <button type="button" class="close destroy_owl" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
           <div class="modal-body">
             <div class="gallery_popup container">
-              <h2>メロナ</h2>
-              <h6>Nelona</h6>
+              <h2>日向さや</h2>
+              <h6>Hinata Sayaka</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/meronasub.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/sayakasub.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -350,20 +350,19 @@ Preloader
                   <li>
                     <h6>Profile</h6>
                   </li>
-					<li>ニックネーム：メロナ</li>
-                  	<li>生年月日：1999/12/20</li>
-					<li>血液型：A型</li>
-					<li>出身地：東京都</li>
-					<li>趣味：寝ること</li>
-					<li>特技：ハム語話せる</li>
-					<li>長所：元気</li>
-					<li>短所：うるさい</li>
-					<li>好きなこと：ハムスター、睡眠</li>
-					<li>嫌いなこと：虫</li>
-					<li>担当カラー：PURPLE</li>
+					<li>名前：日向さや</li>
+					<li>ニックネーム：さやっぴ、さやちゃん</li>
+					<li>担当カラー：CrazyPink</li>
+                  	<li>生年月日：10月6日</li>
+					<li>血液型：B型</li>
+					<li>出身地：岡山県</li>
+					<li>身長：166cm</li>
+					<li>趣味：食べること、睡眠</li>
+					<li>特技：テニス</li>
+					<li>キャッチフレーズ：</li>
                 </ul>
                 <ul class="channels_list row">
-                  <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Melona"><i class="fa fa-twitter"></i>TWITTER</a></li>
+                  <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Saya"><i class="fa fa-twitter"></i>TWITTER</a></li>
                 </ul>
               </div>
             </div>
@@ -378,11 +377,11 @@ Preloader
           <button type="button" class="close destroy_owl" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
           <div class="modal-body">
             <div class="gallery_popup container">
-              <h2>夢乃ねん</h2>
-              <h6>Morishita Kanon</h6>
+              <h2>神楽めろな</h2>
+              <h6>Kagura Merona</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/newnen.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/meornasub.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -391,20 +390,19 @@ Preloader
                   <li>
                     <h6>Profile</h6>
                   </li>
-					<li>ニックネーム：夢乃ねん</li>
-                  	<li>生年月日：06/29</li>
-					<li>血液型：A型</li>
-					<li>出身地：茨城県</li>
-					<li>趣味：貯金、アニメを見ること</li>
-					<li>特技：ピアノ、人の名前と顔をすぐ覚えること</li>
-					<li>長所：人を癒せる、度胸がある</li>
-					<li>短所：優柔不断</li>
-					<li>好きなこと：白米、パンダ、犬、食べるのこと</li>
-					<li>嫌いなこと：自撮り</li>
-					<li>担当カラー：YELLOW</li>
+					<li>名前：神楽めろな</li>
+					<li>ニックネーム：めろな</li>
+					<li>担当カラー：水色</li>
+                  	<li>生年月日：6/11</li>
+					<li>血液型：未定</li>
+					<li>出身地：秋田県</li>
+					<li>趣味：カフェ巡り</li>
+					<li>特技：漫画の速読、箸</li>
+					<li>キャッチフレーズ：新陳代謝が活発な水色担当</li>
                 </ul>
-                <ul class="channels_list row">
-                  <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Nen"><i class="fa fa-twitter"></i>TWITTER</a></li>
+								<ul class="channels_list row">
+									<li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Melona"><i class="fa fa-twitter"></i>TWITTER</a></li>
+									<li class="col-xs-12 col-sm-3"> <a href="https://www.instagram.com/me_me_oo611/"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
                 </ul>
               </div>
             </div>
@@ -419,11 +417,11 @@ Preloader
           <button type="button" class="close destroy_owl" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
           <div class="modal-body">
             <div class="gallery_popup container">
-              <h2>松山ごま</h2>
-              <h6>Kojima Nana</h6>
+              <h2>夢乃ねん</h2>
+              <h6>Yumemo Nen</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/gomachan.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/newnen.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -445,7 +443,7 @@ Preloader
 					<li>担当カラー：ORANGE</li>
                 </ul>
                 <ul class="channels_list row">
-                  <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Goma"><i class="fa fa-twitter"></i>TWITTER</a></li>
+                  <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Nen"><i class="fa fa-twitter"></i>TWITTER</a></li>
                 </ul>
               </div>
             </div>
@@ -460,11 +458,11 @@ Preloader
           <button type="button" class="close destroy_owl" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
           <div class="modal-body">
             <div class="gallery_popup container">
-              <h2>カノン</h2>
-							<h6>Kanon</h6>
+              <h2>松山ごま</h2>
+							<h6>Matsuyama Goma</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/kanonsub.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/gomachan.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -473,20 +471,20 @@ Preloader
                   <li>
                     <h6>Profile</h6>
                   </li>
-					<li>ニックネーム：ひより</li>
-                  	<li>生年月日：2002/08/11</li>
-					<li>血液型：O型</li>
-					<li>出身地：東京都</li>
-					<li>趣味：お料理</li>
-					<li>特技：乗馬</li>
-					<li>長所：負けず嫌い</li>
-					<li>短所：運動音痴</li>
-					<li>好きなこと：食べる事、動物園行く事、アリエル、カービィ</li>
-					<li>嫌いなこと：トマト、ピーマン、勉強</li>
-					<li>担当カラー：BLUE</li>
+					<li>ニックネーム：松山ごま</li>
+					<li>ニックネーム：ごまちゃん、ごまさま</li>
+					<li>担当カラー：メルヘンパープル</li>
+                  	<li>生年月日：4/18</li>
+					<li>血液型：A</li>
+					<li>出身地：愛媛県</li>
+					<li>趣味：読書、カフェに行く、アイドルオタク</li>
+					<li>特技：文章を書くこと、推しジャン</li>
+					<li>キャッチフレーズ：猫とキツネのハーフ！メルヘンパープル担当松山ごまです！</li>
                 </ul>
                 <ul class="channels_list row">
-                  <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Kanon"><i class="fa fa-twitter"></i>TWITTER</a></li>
+                  <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Goma"><i class="fa fa-twitter"></i>TWITTER</a></li>
+									<li class="col-xs-12 col-sm-3"> <a href="https://instagram.com/goma_matsuyama?igshid=wsd6m180i2wc"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
+									<li class="col-xs-12 col-sm-3"> <a href=":https://note.com/matsugoma"><i class="fa fa-note"></i>NOTE</a></li>
                 </ul>
               </div>
             </div>
