--- a/index.html
+++ b/index.html
@@ -136,43 +136,43 @@ Preloader
           <div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
             <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop1"><img src="assets/img/megu.jpg" alt="" /> </a>
               <figcaption>
-                <h6>メグ・ピッチ・オリオン(めぐぴ)</h6>
-                Prpmgp</figcaption>
+                <h6>メグ・ピッチ・オリオン</h6>
+                Megupi</figcaption>
             </figure>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
             <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop3"><img src="assets/img/sayaka.jpg" alt="" /> </a>
               <figcaption>
-                <h6>さや</h6>
-                Saya</figcaption>
+                <h6>黒崎かのん</h6>
+                Kurosaki Kanon</figcaption>
             </figure>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
             <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop4"><img src="assets/img/merona.jpg" alt="" /> </a>
               <figcaption>
-                <h6>メロナ</h6>
-                Melona</figcaption>
+                <h6>日向さや</h6>
+                Hinata Saya</figcaption>
             </figure>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
             <figure class="animated fadeInUp"><a href="#" data-toggle="modal" data-target="#gal_pop5"> <img src="assets/img/newnen.jpg" alt="" /> </a>
               <figcaption>
-                <h6>夢乃ネン</h6>
-                Yumeno Nen</figcaption>
+                <h6>神楽めろな</h6>
+                Kagura Merona</figcaption>
             </figure>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
             <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop6"> <img src="assets/img/gomachan.jpg" alt="" /> </a>
               <figcaption>
-                <h6>松山ごま</h6>
-                Matsuyama Goma</figcaption>
+                <h6>夢乃ねん</h6>
+								Yumeno Nen</figcaption>
             </figure>
           </div>
 			<div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
             <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop7"> <img src="assets/img/kanon.jpg" alt="" /> </a>
               <figcaption>
-                <h6>カノン</h6>
-                Kanon</figcaption>
+                <h6>松山ごま</h6>
+                Matsuyama Goma</figcaption>
             </figure>
           </div>
 			<div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
