--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ Preloader
 					<li>身長：166cm</li>
 					<li>趣味：食べること、睡眠</li>
 					<li>特技：テニス</li>
-					<li>キャッチフレーズ：</li>
+					<li>キャッチフレーズ：三・三・さやっぴ拍子! せーの! ピッ!ピッ!ピッ! ピッ!ピッ!ピッ! ピッ!ピッ!ピッ!ピッ!さやっぴ!! はい! 岡山県から来ました日向さやです!</li>
                 </ul>
                 <ul class="channels_list row">
                   <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Saya"><i class="fa fa-twitter"></i>TWITTER</a></li>
