--- a/index.html
+++ b/index.html
@@ -430,20 +430,19 @@ Preloader
                   <li>
                     <h6>Profile</h6>
                   </li>
-					<li>ニックネーム：goma</li>
-                  	<li>生年月日：06/17</li>
-					<li>血液型：O型</li>
-					<li>出身地：群馬県</li>
-					<li>趣味：犬の散歩</li>
-					<li>特技：あんまり上手じゃないけど左手で絵を描くこと</li>
-					<li>長所：たくさん笑うこと</li>
-					<li>短所：表情が顔にすぐでること</li>
-					<li>好きなこと：ごろごろしてぼーっとしてること。Instagramを見ること。</li>
-					<li>嫌いなこと：けんか。</li>
-					<li>担当カラー：ORANGE</li>
+					<li>名前：夢乃ねん</li>
+					<li>ニックネーム：ねんねん</li>
+					<li>担当カラー：フレッシュオレンジ</li>
+                  	<li>生年月日：3/3</li>
+					<li>血液型：ハート型</li>
+					<li>出身地：オレンジ王国</li>
+					<li>趣味：動物の動画をみること</li>
+					<li>特技：おえかき</li>
                 </ul>
                 <ul class="channels_list row">
                   <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Nen"><i class="fa fa-twitter"></i>TWITTER</a></li>
+									<li class="col-xs-12 col-sm-3"> <a href="https://www.instagram.com/nennen_zzz/"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
+									<li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Nen"><i class="fa fa-twitter"></i>TWITTER</a></li>
                 </ul>
               </div>
             </div>
