--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@ Preloader
           <div class="contact_Us">
             <div id="tab1" class="tab-content active">
               <ul class="fanletter">
-
+								<li>1人じゃない！始まりの合図逃さないでいこう!</li>
               </ul>
             </div>
           </div>
