--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Preloader
             <li><a href="#section_5" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Schedule</a></li>
             <li><a href="#section_7" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Member</a></li>
             <li><a href="#section_12" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Biography</a></li>
-            <li><a href="mailto:plussugar0314@gmail.com" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Contact</a></li>
+            <li><a href="mailto:plus_sugar6@yahoo.ne.jp" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Contact</a></li>
           </ul>
         </div>
         <!--/.nav-collapse -->
@@ -356,7 +356,6 @@ Preloader
                   	<li>生年月日：10月6日</li>
 					<li>血液型：B型</li>
 					<li>出身地：岡山県</li>
-					<li>身長：166cm</li>
 					<li>趣味：食べること、睡眠</li>
 					<li>特技：テニス</li>
 					<li>キャッチフレーズ：三・三・さやっぴ拍子! せーの! ピッ!ピッ!ピッ! ピッ!ピッ!ピッ! ピッ!ピッ!ピッ!ピッ!さやっぴ!! はい! 岡山県から来ました日向さやです!</li>
@@ -483,7 +482,7 @@ Preloader
                 <ul class="channels_list row">
                   <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Goma"><i class="fa fa-twitter"></i>TWITTER</a></li>
 									<li class="col-xs-12 col-sm-3"> <a href="https://instagram.com/goma_matsuyama?igshid=wsd6m180i2wc"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
-									<li class="col-xs-12 col-sm-3"> <a href=":https://note.com/matsugoma"><i class="fa fa-note"></i>NOTE</a></li>
+									<li class="col-xs-12 col-sm-3"> <a href="https://note.com/matsugoma"><i class="fa fa-note"></i>NOTE</a></li>
                 </ul>
               </div>
             </div>
