--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ Preloader
                 <ul class="channels_list row">
                   <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Nen"><i class="fa fa-twitter"></i>TWITTER</a></li>
 									<li class="col-xs-12 col-sm-3"> <a href="https://www.instagram.com/nennen_zzz/"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
-									<li class="col-xs-12 col-sm-3"> <a href="https://vt.tiktok.com/nen_zzz33/"><i class="fa fa-tiktok"></i>TIKTOK</a></li>
+									<li class="col-xs-12 col-sm-3"> <a href="https://www.tiktok.com/@nennen_zzz"><i class="fa fa-tiktok"></i>TIKTOK</a></li>
                 </ul>
               </div>
             </div>
