--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@ Preloader
                   <li>
                     <h6>Profile</h6>
                   </li>
-					<li>ニックネーム：ももたん</li>
+					<li>ニックネーム：ももか</li>
                   	<li>生年月日：2002/09/17</li>
 					<li>血液型：B型</li>
 					<li>出身地：熊本県</li>
