--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Preloader
             <figure class="animated fadeInUp"><a href="#" data-toggle="modal" data-target="#gal_pop5"> <img src="assets/img/merona.jpg" alt="" /> </a>
               <figcaption>
                 <h6>神楽めろな</h6>
-                Kagura Merona</figcaption>
+                Kagura Melona</figcaption>
             </figure>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
@@ -377,7 +377,7 @@ Preloader
           <div class="modal-body">
             <div class="gallery_popup container">
               <h2>神楽めろな</h2>
-              <h6>Kagura Merona</h6>
+              <h6>Kagura Melona</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
                   <li class="gallery-item"><a href="#"><img src="assets/img/meronasub.jpg" alt=""></a></li>
