--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ Preloader
                 <ul class="channels_list row">
                   <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Prpmgp"><i class="fa fa-twitter"></i>TWITTER</a></li>
 	                <li class="col-xs-12 col-sm-3"> <a href="https://www.instagram.com/prp_mgp_0717/"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
-									<li class="col-xs-12 col-sm-3"> <a href="https://vt.tiktok.com/MuEh3H/"><i class="fa fa-tiktok"></i>TIKTOK</a></li>
+									<li class="col-xs-12 col-sm-3"> <a href="https://www.tiktok.com/@mgp_prp"><i class="fa fa-tiktok"></i>TIKTOK</a></li>
 	              </ul>
               </div>
             </div>
