--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ Preloader
             <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop1"><img src="assets/img/megu.jpg" alt="" /> </a>
               <figcaption>
                 <h6>メグ・ピッチ・オリオン</h6>
-                Megupi</figcaption>
+                Megu・Pitch・Orion</figcaption>
             </figure>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
