--- a/index.html
+++ b/index.html
@@ -510,20 +510,19 @@ Preloader
                   <li>
                     <h6>Profile</h6>
                   </li>
-					<li>ニックネーム：ももか</li>
-                  	<li>生年月日：2002/09/17</li>
-					<li>血液型：B型</li>
-					<li>出身地：熊本県</li>
-					<li>趣味：お洋服、美容情報見ること</li>
-					<li>特技：アラームで早起きすること</li>
-					<li>長所：諦めない</li>
-					<li>短所：涙もろい</li>
-					<li>好きなこと：お洋服、美容、韓国料理、タピオカ</li>
-					<li>嫌いなこと：虫、おばけ、痛い</li>
+					<li>名前：藤宮ももか</li>
+					<li>ニックネーム：ももちぇる</li>
+					<li>担当カラー：黄色</li>
+                  	<li>生年月日：6/13</li>
+					<li>血液型：わからない</li>
+					<li>出身地：埼玉県</li>
+					<li>趣味：ゲーム</li>
+					<li>特技：探し中</li>
 					<li>担当カラー：WHITE</li>
                 </ul>
                 <ul class="channels_list row">
                   <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_chel"><i class="fa fa-twitter"></i>TWITTER</a></li>
+									<li class="col-xs-12 col-sm-3"> <a href="https://www.instagram.com/chelchaan/?hl=ja"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
                 </ul>
               </div>
             </div>
