--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ Preloader
 					<li>出身地：埼玉県</li>
 					<li>趣味：ゲーム</li>
 					<li>特技：探し中</li>
-					<li>担当カラー：WHITE</li>
+					<li>キャッチフレーズ：ない</li>
                 </ul>
                 <ul class="channels_list row">
                   <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_chel"><i class="fa fa-twitter"></i>TWITTER</a></li>
