--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ Preloader
             </figure>
           </div>
 			<div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop8"> <img src="assets/img/momotan.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop8"> <img src="assets/img/momoka.jpg" alt="" /> </a>
               <figcaption>
                 <h6>藤宮ももか</h6>
                 Fujimiya Momoka</figcaption>
