--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ Preloader
               <h6>Fujimiya Momoka</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/momotansub.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/momoka.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
